More backporting to Java 8